--- a/src/main/resources/templates/tela.tecnico.html
+++ b/src/main/resources/templates/tela.tecnico.html
@@ -29,6 +29,15 @@
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
+
+        <a href="/tecnico">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            CHAMADOS EM ABERTO
+        </a>
+
         <a href="/">
             <span></span>
             <span></span>
