--- a/src/main/resources/templates/tela.tecnico.html
+++ b/src/main/resources/templates/tela.tecnico.html
@@ -125,12 +125,15 @@
                     </table>
 
                 </div>
-
             </section>
         </main>
     </div>
 </section>
-
+<!--
+<div class="return-index" style="margin-top: 250px;">
+    <p><a th:href="@{/tecnico/{id_tecnico}(id_tecnico=${userOn.id})}"><img class="color-image" src="/styles/images/voltar.png" /></a>Voltar para tela inicial</p>
+</div>
+-->
 <footer class="footer">
     <div class="container">
         <div class="footer-content">
