--- a/src/main/resources/templates/usuario.novo.chamado.html
+++ b/src/main/resources/templates/usuario.novo.chamado.html
@@ -67,11 +67,11 @@
                             <span class="input-group-text">Prioridade</span>
                         </div>
                         <select class="form-control" id="prioridade" name="prioridade" required>
-                            <option value="baixa" th:selected="${chamado.id_prioridade.nome == 'Baixa'}">Baixa</option>
-                            <option value="media" th:selected="${chamado.id_prioridade.nome == 'Média'}">Média</option>
-                            <option value="alta" th:selected="${chamado.id_prioridade.nome == 'Alta'}">Alta</option>
+                            <option value="baixa">Baixa</option>
+                            <option value="media">Média</option>
+                            <option value="alta">Alta</option>
                         </select>
-                        <input type="hidden" name="id_prioridade" th:value="${chamado.id_prioridade.id}" />
+                        <input type="hidden" name="id_prioridade" />
 
                         <div class="data">
                             <div class="data_abertura">
