--- a/src/main/resources/templates/tela.tecnico.html
+++ b/src/main/resources/templates/tela.tecnico.html
@@ -103,8 +103,7 @@
                                 <td th:text="${dtFimFormatada[i.index]}">Data Fim</td>
 
                                 <input type="hidden" name="id" th:value="${chamado.id}" />
-                                <input type="hidden" name="id_chamado" th:value="${chamado.id}" />
-
+                                <input type="hidden" name="id_chamado" th:value="${chamado.id}"/>
 
                                 <!--                                <input type="hidden" name="nome" value="${nome}" />
                                 -->
@@ -116,24 +115,25 @@
 
 
 
-                                <td><button type="submit" class="botao-salvar">Salvar</button> </td>
+                                <td>
+                                    <button type="submit" class="botao-salvar">Salvar</button>
+                                </td>
                             </form>
                         </tr>
 
                         </tbody>
                         </form>
                     </table>
+                </div>
 
+                <div class="return-index" style="margin-top: 250px;">
+                    <p><a th:href="@{/tecnico/{id_tecnico}(id_tecnico=${userOn.id})}><img class="color-image" src="/styles/images/voltar.png"/></a>Voltar para chamados</p>     <!--"@{/tecnico/{id}(id=${userOn.id})}"        "/tecnico/{id}"-->
                 </div>
             </section>
         </main>
     </div>
 </section>
-<!--
-<div class="return-index" style="margin-top: 250px;">
-    <p><a th:href="@{/tecnico/{id_tecnico}(id_tecnico=${userOn.id})}"><img class="color-image" src="/styles/images/voltar.png" /></a>Voltar para tela inicial</p>
-</div>
--->
+
 <footer class="footer">
     <div class="container">
         <div class="footer-content">
