--- a/src/main/resources/templates/tela.tecnico.html
+++ b/src/main/resources/templates/tela.tecnico.html
@@ -125,10 +125,10 @@
                         </form>
                     </table>
                 </div>
-
+<!--
                 <div class="return-index" style="margin-top: 250px;">
                     <p><a th:href="@{/tecnico/{id_tecnico}(id_tecnico=${userOn.id})}><img class="color-image" src="/styles/images/voltar.png"/></a>Voltar para chamados</p>     <!--"@{/tecnico/{id}(id=${userOn.id})}"        "/tecnico/{id}"-->
-                </div>
+                <!--</div> -->
             </section>
         </main>
     </div>
