--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -131,6 +131,7 @@
                                 class="input-telefone"
                                 required="required"
                                 placeholder="(DDD) telefone"
+                                maxlength="30"
                         />
                     </div>
                     <div>
