--- a/src/main/resources/templates/usuario.chamados.html
+++ b/src/main/resources/templates/usuario.chamados.html
@@ -66,7 +66,7 @@
                             <td th:text="${chamado.id_usuario.setor.nome}">Setor</td>
                             <td th:text="${chamado.id_prioridade.nome}">Prioridade</td>
                             <td th:text="${chamado.descricao}">Descrição</td>
-                            <td th:text="${chamado.dt_fim}">Data Fim</td>
+                            <td th:text="${dtFimFormatada[i.index]}">Data Fim</td>
                             <td>
                             <form th:action="@{/usuario/chamado/{id}/excluir(id=${chamado.id})}" method="post" id="deleteForm">
                                 <input type="hidden" name="id" th:value="${chamado.id}" />
