--- a/src/main/resources/static/styles/usuario.chamado.css
+++ b/src/main/resources/static/styles/usuario.chamado.css
@@ -317,10 +317,11 @@ font-family: "Orbitron", sans-serif;
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-bottom:50px; /*************************/
 }
 
 .tabela {
-  width: 100%;
+  width: 150%;
   border-collapse: collapse;
   border-radius: 10px;
   overflow: hidden;
@@ -329,8 +330,8 @@ font-family: "Orbitron", sans-serif;
 .tabela th,
 .tabela td {
   border: 1px solid #ddd;
-  padding: 12px;
-  text-align: left;
+  padding: 4px;
+  text-align: center;
   background-color: var(--segunda-cor);
   color: var(--black-cor);
 }
@@ -361,21 +362,32 @@ font-family: "Orbitron", sans-serif;
 
 .tabela th:nth-child(3),
 .tabela td:nth-child(3) {
-  width: 25%;
+  width: 15%;
 }
 
 .tabela th:nth-child(4),
 .tabela td:nth-child(4) {
-  width: 10%;
+  width: 35% !important;
 }
 
 .tabela th:nth-child(5),
-.tabela td:nth-child(5),
+.tabela td:nth-child(5){
+  width: 15%;
+}
 .tabela th:nth-child(6),
 .tabela td:nth-child(6) {
-  width: 12%;
+width:15%;
 }
 
+.tabela th:nth-child(7),
+.tabela td:nth-child(7) {
+width:15%;
+}
+
+.tabela th:nth-child(8),
+.tabela td:nth-child(8) {
+width:15%;
+}
 
 .botao-salvar, .botao-excluir{
   color: #03e9f4;
